--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.light {
+    background: #fff;
+    color: #000;
+  }
+  
+  .dark {
+    background: #333;
+    color: #fff;
+  }
